2006-12-05 Carlos Nieves Onega <cnieves@iespana.es>

	* src/x_compselect.c: clib_directories is now a double linked list.

2006-12-04 Ales Hvezda   <ahvezda@geda.seul.org>

	* lib/system-gschemrc.in: Added Control-x, Control-c, Control-v
	for cut buffer, copy buffer, and paste buffer menu and hotkey
	items.	The paste automatically shows the outline (just like
	pressing "yp").  Changed the behavior of all the paste menu
	options to automatically show an outline of the paste buffer
	(just like pressing "yp").  This should make it more obvious as
	to what to do when pasting.

	* src/i_basic.c, src/i_callbacks.c: Modified the code to
	enable/disable the new Cut, Copy, and Paste commands.  Also
	modified the code to properly enable and disable the "Buffer/Paste
	from X" commands only if there is something in the buffer.

	* src/i_basic.c: Also added the code to enable/disable "Multiple
	Copy Mode".  Also fixed a unused variable compiler warning.

	* src/x_dialog.c: Increased the size of the hotkey char buffer
	for the hotkey dialog.

	* src/x_menus.c: Removed the right justification of the help menu
	item since it has gone out of style to have the help menu all the 
	way on the right hand side.  Something about usability. :)

2006-12-02  Mike Jarabek  <mjarabek@istop.com>

	* include/i_vars.h include/prototype.h src/g_rc.c src/g_register.c
	  src/i_vars.c: Support for rc command to set the postscript line
	  default width.

	* lib/system-gschemrc.in: Added call to the new rc function
	  to set the system wide default line width

	* examples/drawing_primitives.sch: Added extra line to show line
	  width relative to pin and net width.

2006-12-02 Ales Hvezda   <ahvezda@geda.seul.org>

	The running of gettextize changed: ChangeLog, Makefile.am,
	configure.ac, m4/ChangeLog, m4/Makefile.am, po/Makevars.

2006-12-02  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Remove intl.
	(EXTRA_DIST): Add config.rpath.