@@ -1,5 +1,10 @@
 2006-12-05 Carlos Nieves Onega <cnieves@iespana.es>
 
+	* include/prototype.h, src/g_hook.c, src/g_register.c: 
+	  Changed scheme function g_get_object_bounds to accept two 
+	  more parameters, allowing to exclude attributes, or objects types
+	  when calculing the object bounds.
+	
 	* src/x_compselect.c: clib_directories is now a double linked list.
 
 2006-12-04 Ales Hvezda   <ahvezda@geda.seul.org>
